Enhance site design

--- a/ai-services.html
+++ b/ai-services.html
@@ -9,30 +9,38 @@
 </head>
 <body>
   <header>
-    <h1>Cape Code Collective</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="ai-services.html">AI Services</a>
-      <a href="investor.html">Investors</a>
-    </nav>
+    <div class="container">
+      <h1>Cape Code Collective</h1>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="ai-services.html">AI Services</a>
+        <a href="investor.html">Investors</a>
+      </nav>
+    </div>
   </header>
   <main>
     <div class="hero">
-      <img src="https://source.unsplash.com/1600x400/?artificial-intelligence" alt="AI concept art"/>
-      <h2>Our AI Offerings</h2>
+      <div class="container">
+        <img src="https://source.unsplash.com/1600x400/?artificial-intelligence" alt="AI concept art" />
+        <h2>Our AI Offerings</h2>
+      </div>
     </div>
     <section>
-      <h3>Services</h3>
-      <ul>
-        <li><strong>Predictive Analytics:</strong> Use data-driven insights to forecast trends and behaviors.</li>
-        <li><strong>Natural Language Processing:</strong> Automate customer support and gain textual insights.</li>
-        <li><strong>Computer Vision:</strong> Leverage image recognition for real-time understanding.</li>
-        <li><strong>Custom AI Solutions:</strong> Tailored models to solve unique business problems.</li>
-      </ul>
+      <div class="container">
+        <h3>Services</h3>
+        <ul>
+          <li><strong>Predictive Analytics:</strong> Use data-driven insights to forecast trends and behaviors.</li>
+          <li><strong>Natural Language Processing:</strong> Automate customer support and gain textual insights.</li>
+          <li><strong>Computer Vision:</strong> Leverage image recognition for real-time understanding.</li>
+          <li><strong>Custom AI Solutions:</strong> Tailored models to solve unique business problems.</li>
+        </ul>
+      </div>
     </section>
     <section>
-      <h3>Benefits</h3>
-      <p>Our solutions boost efficiency, reduce costs, and unlock new revenue streams. Let our team guide your AI journey.</p>
+      <div class="container">
+        <h3>Benefits</h3>
+        <p>Our solutions boost efficiency, reduce costs, and unlock new revenue streams. Let our team guide your AI journey.</p>
+      </div>
     </section>
   </main>
   <div class="footer">&copy; 2024 Cape Code Collective</div>
