--- a/index.html
+++ b/index.html
@@ -2,50 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Cape Code Collective builds AI-driven solutions to accelerate business growth." />
   <title>Cape Code Collective</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="ai-services.html">AI Services</a></li>
-        <li><a href="investor.html">Investors</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="container">
+      <h1>Cape Code Collective</h1>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="ai-services.html">AI Services</a></li>
+          <li><a href="investor.html">Investors</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
     <section id="home" class="hero">
-      <img src="https://source.unsplash.com/1600x400/?technology,futuristic" alt="Futuristic technology background"/>
-      <h2>Welcome to Cape Code Collective</h2>
-      <p>Your Partner in Cutting-Edge Innovation</p>
-      <p>We build AI-driven tools that help businesses grow faster.</p>
-      <a class="cta" href="#contact">Join Us</a>
+      <div class="container">
+        <img src="https://source.unsplash.com/1600x400/?technology,futuristic" alt="Futuristic technology background" />
+        <h2>Welcome to Cape Code Collective</h2>
+        <p>Your Partner in Cutting-Edge Innovation</p>
+        <p>We build AI-driven tools that help businesses grow faster.</p>
+        <a class="cta" href="#contact">Join Us</a>
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="container">
+        <div class="feature-card">
+          <h3>Fast Development</h3>
+          <p>We deliver solutions quickly using modern frameworks.</p>
+        </div>
+        <div class="feature-card">
+          <h3>AI Expertise</h3>
+          <p>Our team excels at building advanced machine learning systems.</p>
+        </div>
+        <div class="feature-card">
+          <h3>Collaborative Support</h3>
+          <p>We work closely with clients to ensure lasting success.</p>
+        </div>
+      </div>
     </section>
 
     <section id="about" class="about">
-      <h3>Why Choose Us?</h3>
-      <ul>
-        <li>Expert team with years of industry experience</li>
-        <li>Proven results in automation and analytics</li>
-        <li>Custom solutions tailored to your needs</li>
-      </ul>
-      <h2>About Us</h2>
-      <p>
-        Cape Code Collective is a group of developers and designers
-        working together to build amazing things and support each other.
-      </p>
+      <div class="container">
+        <h3>Why Choose Us?</h3>
+        <ul>
+          <li>Expert team with years of industry experience</li>
+          <li>Proven results in automation and analytics</li>
+          <li>Custom solutions tailored to your needs</li>
+        </ul>
+        <h2>About Us</h2>
+        <p>
+          Cape Code Collective is a group of developers and designers
+          working together to build amazing things and support each other.
+        </p>
+      </div>
     </section>
 
     <section id="contact" class="contact">
-      <h2>Get Involved</h2>
-      <p>Contact us today to learn how we can transform your workflow.</p>
-      <p>Email us at <a href="mailto:info@capecodecollective.com">info@capecodecollective.com</a></p>
+      <div class="container">
+        <h2>Get Involved</h2>
+        <p>Contact us today to learn how we can transform your workflow.</p>
+        <p>Email us at <a href="mailto:info@capecodecollective.com">info@capecodecollective.com</a></p>
+      </div>
     </section>
   </main>
 
