--- a/investor.html
+++ b/investor.html
@@ -9,31 +9,39 @@
 </head>
 <body>
   <header>
-    <h1>Cape Code Collective</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="ai-services.html">AI Services</a>
-      <a href="investor.html">Investors</a>
-    </nav>
+    <div class="container">
+      <h1>Cape Code Collective</h1>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="ai-services.html">AI Services</a>
+        <a href="investor.html">Investors</a>
+      </nav>
+    </div>
   </header>
   <main>
     <div class="hero">
-      <img src="https://source.unsplash.com/1600x400/?investment,tech" alt="Investment meeting"/>
-      <h2>Join Us on Our Journey</h2>
+      <div class="container">
+        <img src="https://source.unsplash.com/1600x400/?investment,tech" alt="Investment meeting" />
+        <h2>Join Us on Our Journey</h2>
+      </div>
     </div>
     <section>
-      <h3>Why Invest?</h3>
-      <p>Cape Code Collective is building the next generation of AI tools for businesses worldwide. Our products address real market needs and deliver measurable ROI.</p>
-      <ul>
-        <li>Rapidly expanding customer base</li>
-        <li>Proprietary technology with strong competitive advantage</li>
-        <li>Experienced leadership and development team</li>
-        <li>Clear roadmap to scalability and profitability</li>
-      </ul>
+      <div class="container">
+        <h3>Why Invest?</h3>
+        <p>Cape Code Collective is building the next generation of AI tools for businesses worldwide. Our products address real market needs and deliver measurable ROI.</p>
+        <ul>
+          <li>Rapidly expanding customer base</li>
+          <li>Proprietary technology with strong competitive advantage</li>
+          <li>Experienced leadership and development team</li>
+          <li>Clear roadmap to scalability and profitability</li>
+        </ul>
+      </div>
     </section>
     <section>
-      <h3>Get in Touch</h3>
-      <p>Interested in learning more about our growth plans? Contact <a href="mailto:invest@capecode.example">invest@capecode.example</a> for our pitch deck and detailed financials.</p>
+      <div class="container">
+        <h3>Get in Touch</h3>
+        <p>Interested in learning more about our growth plans? Contact <a href="mailto:invest@capecode.example">invest@capecode.example</a> for our pitch deck and detailed financials.</p>
+      </div>
     </section>
   </main>
   <div class="footer">&copy; 2024 Cape Code Collective</div>
